# segue-attacca

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: rust.yml
assets/: main.css
segue-attacca-lib/: Cargo.toml
segue-attacca-lib/src/: lib.rs  music_library.rs  playback.rs
segue-attacca-tui/: Cargo.toml
segue-attacca-tui/src/: assets.rs  events.rs  main.rs  terminal_events.rs  track_inspector.rs  track_list.rs
src/: app.rs  image.rs  main.rs  music.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
