[package]
name = "shuffle"
version = "0.1.0"
authors = ["AmitMaish <83043520+AmitMaish@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.5"
dioxus = { version = "0.6.0", features = [] }
futures-util = "0.3.31"
rayon = "1.10.0"
rodio = { version = "0.20.1", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
