[package]
name = "segue-attacca-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
rodio = { version = "0.20.1", features = ["tracing"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt", "sync"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
